--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,14 +9,13 @@ version = "0.1.0"
 description = "PowerPoint concatenation library using pptx-slide-copier"
 readme = "README.md"
 requires-python = ">=3.8"
-license = {text = "MIT"}
+license-files = ["LICEN[CS]E*"]
 authors = [
     {name = "SpringMT", email = "today.is.sky.blue.sky@gmail.com"}
 ]
 classifiers = [
     "Development Status :: 3 - Alpha",
     "Intended Audience :: Developers",
-    "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
